--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
 
-    <!-- Create an iframe tag-->
+    <iframe
+      width="100%" height="400px" frameborder="1"
+    src="https://maps.app.goo.gl/Fe7vD33pJvk9sT7Q7"></iframe>
 
   </body>
 </html>
